<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework 252</string>
    <string name="no_tasks">No Tasks</string>
    
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    
    <string name="hint_task_title">Task Title (Required)</string>
    <string name="hint_start_date">Start Date (mm/dd/yy)</string>
    <string name="hint_task_description">Task Description</string>
    <string name="hint_end_date">End Date (mm/dd/yy)</string>

    <string name="label_task_title">Task Title:</string>
    <string name="label_start_date">Start Date:</string>
    <string name="label_task_description">Task Description:</string>
    <string name="label_end_date">End Date:</string>

    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the task</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a task title</string>
    
    <string name="button_save_task">Save Task</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    
    <string name="tasks">TASKS</string>
    <string name="dummy"> </string>
    

</resources>