<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addEditScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:orientation="vertical"
        android:useDefaultMargins="true">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_title"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:inputType="textCapWords" >
        </EditText>

        <EditText
            android:id="@+id/startDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_date"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:inputType="date" >
        </EditText>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_description"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:inputType="textCapSentences" >
        </EditText>

        <EditText
            android:id="@+id/endDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_end_date"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:inputType="date" >
        </EditText>

        <Button
            android:id="@+id/saveTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_save_task" >
        </Button>
    </GridLayout>

</ScrollView>